Wed Nov 17 17:48:50 CET 1999  Marc Lehmann <pcg@goof.com>

        * libgimp/*: Updated header comment from LGPL2.0 to LGPL2.1, where
        applicable.

Wed Nov 17 20:07:08 GMT 1999  Adam D. Moss <adam@gimp.org>

	* app/fileops.c: Fix multi-thumbnail code oversight
	causing double load-and-thumbnailing of first/only image.

Wed Nov 17 17:29:35 1999  ape@spacetec.no  (Asbjorn Pettersen)

	* modules/colorsel_triangle.c (module_init):  Removed most of the
	OS/2 code. 	Include  modregister.h.

Wed Nov 17 15:37:06 MET 1999  Sven Neumann <sven@gimp.org>
	
	* app/color_balance.c
	* plug-ins/common/colortoalpha.c
	* plug-ins/common/grid.c
	* plug-ins/common/mapcolor.c
	* plug-ins/common/nova.c
	* plug-ins/common/papertile.c
	* plug-ins/ifscompose/ifscompose.c
	* plug-ins/sinus/sinus.c
	* po-plug-ins/POTFILES.in: more internationalization 

Wed Nov 17 00:14:11 MET 1999  Sven Neumann <sven@gimp.org>

	* libgimp/gimpcolorbutton.c: hide the colorselection dialog when
	the button is set insensitive
	
	* plug-ins/common/Makefile.am
	* plug-ins/common/nova.c
	* plug-ins/common/papertile.c
	* plug-ins/common/plugin-defs.pl
	* plug-ins/sinus/Makefile.am
	* plug-ins/sinus/sinus.c
	* plug-ins/sinus/sinus_logo.h
	* plug-ins/gap/iter_ALT/mod/plug_in_sinus_iter_ALT.inc
	* po-plug-ins/POTFILES.in: made supernova, papertile and sinus use
	the gimpcolorbutton, internationalized the plug-ins while I was on it

>>>>>>> 1.1821
1999-11-16  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpchainbutton.c: the chainbutton's parent_class is a
	GtkTable, not a GtkWidget. Code formating paranoia.

Tue Nov 16 11:16:41 MET 1999  Sven Neumann <sven@gimp.org>

	* plug-ins/gap/README
	* plug-ins/gap/gap_filter_iterators.c
	* plug-ins/gap/gap_main.c
	* plug-ins/gap/iter_ALT/mod/plug_in_nova_iter_ALT.inc
	* plug-ins/gap/iter_ALT/old/plug_in_warp_iter_ALT.inc: applied a patch
	from Wolfgang Hofer <hof@hotbot.com> with updates to the GAP

1999-11-15  Tor Lillqvist  <tml@iki.fi>
